--- a/appPages/oAuth-client-registration.html
+++ b/appPages/oAuth-client-registration.html
@@ -30,19 +30,19 @@
 	      <form id="form-authorize-client">
 	        <div data-role="fieldcontain">
    	          <label for="client_name">Name:</label>
-      <input type="text" name="client_name" id="client_name" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_name" id="client_name" value="" placeholder="" />
               <label for="client_Description">Description:</label>
-      <input type="text" name="client_Description" id="client_Description" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_Description" id="client_Description" value="" placeholder="" />
               <label for="client_image_url">Image url:</label>
-      <input type="text" name="client_image_url" id="client_image_url" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_image_url" id="client_image_url" value="" placeholder="" />
               <label for="client_callback_url">Callback url:</label>
-		  <input type="text" name="client_callback_url" id="client_callback_url" value="" placeholder="KRL Rocks" />
+		  <input type="text" name="client_callback_url" id="client_callback_url" value="" placeholder="" />
               <label for="client_declined_url">Declined url:</label>
-      <input type="text" name="client_declined_url" id="client_declined_url" value="" placeholder="KRL Rocks" />             
+      <input type="text" name="client_declined_url" id="client_declined_url" value="" placeholder="" />             
               <label for="client_info_page_url">info page url:</label>
-      <input type="text" name="client_info_page_url" id="client_info_page_url" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_info_page_url" id="client_info_page_url" value="" placeholder="" />
               <label for="client_bootstrapRids">bootstrap Rids:</label>
-      <input type="text" name="client_bootstrapRids" id="client_bootstrapRids" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_bootstrapRids" id="client_bootstrapRids" value="" placeholder="" />
 		</div>
 	      </form>
 	      <div>
@@ -79,19 +79,19 @@
         <form id="form-update-client">
           <div data-role="fieldcontain">
               <label for="client_name">Name:</label>
-      <input type="text" name="client_name" id="client_name" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_name" id="client_name" value="" placeholder="" />
               <label for="client_Description">Description:</label>
-      <input type="text" name="client_Description" id="client_Description" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_Description" id="client_Description" value="" placeholder="" />
               <label for="client_image_url">Image url:</label>
-      <input type="text" name="client_image_url" id="client_image_url" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_image_url" id="client_image_url" value="" placeholder="" />
               <label for="client_callback_url">Callback url:</label>
-      <input type="text" name="client_callback_url" id="client_callback_url" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_callback_url" id="client_callback_url" value="" placeholder="" />
               <label for="client_declined_url">Declined url:</label>
-      <input type="text" name="client_declined_url" id="client_declined_url" value="" placeholder="KRL Rocks" />             
+      <input type="text" name="client_declined_url" id="client_declined_url" value="" placeholder="" />             
               <label for="client_info_page_url">info page url:</label>
-      <input type="text" name="client_info_page_url" id="client_info_page_url" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_info_page_url" id="client_info_page_url" value="" placeholder="" />
               <label for="client_bootstrapRids">bootstrap Rids:</label>
-      <input type="text" name="client_bootstrapRids" id="client_bootstrapRids" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_bootstrapRids" id="client_bootstrapRids" value="" placeholder="" />
     </div>
         </form>
         <div>
