--- a/appPages/subscription.html
+++ b/appPages/subscription.html
@@ -32,19 +32,19 @@
      <form id="form-subscribe">
        <div data-role="fieldcontain">
         <label for="Subscription_name">Name:</label>
-        <input type="text" name="Subscription_name" id="Subscription_name" value="" placeholder="KRL Rocks" />
+        <input type="text" name="Subscription_name" id="Subscription_name" value="" placeholder="" />
         <label for="Subscription_name_space">Name Space:</label>
-        <input type="text" name="Subscription_name_space" id="Subscription_name_space" value="" placeholder="KRL Rocks" />
+        <input type="text" name="Subscription_name_space" id="Subscription_name_space" value="" placeholder="" />
         <label for="Subscription_type">Channel Type:</label>
         <input type="text" name="Subscription_type" id="Subscription_type" value="" placeholder="Type" />
         <label for="Subscription_my_role">My_role:</label>
-        <input type="text" name="Subscription_my_role" id="Subscription_my_role" value="" placeholder="KRL Rocks" />
+        <input type="text" name="Subscription_my_role" id="Subscription_my_role" value="" placeholder="" />
         <label for="Subscription_your_role">Your_role:</label>
-        <input type="text" name="Subscription_your_role" id="Subscription_your_role" value="" placeholder="KRL Rocks" />
+        <input type="text" name="Subscription_your_role" id="Subscription_your_role" value="" placeholder="" />
         <label for="Subscription_target">Target:</label>
-        <input type="text" name="Subscription_target" id="Subscription_target" value="" placeholder="KRL Rocks" />
+        <input type="text" name="Subscription_target" id="Subscription_target" value="" placeholder="" />
         <label for="Subscription_attrs">Attrs:</label>
-        <input type="text" name="Subscription_attrs" id="Subscription_attrs" value="" placeholder="KRL Rocks" />
+        <input type="text" name="Subscription_attrs" id="Subscription_attrs" value="" placeholder="" />
       </div>
     </form>
     <div>
