--- a/appPages/Scheduled.html
+++ b/appPages/Scheduled.html
@@ -64,7 +64,8 @@
 			        <label for="radio-choice-h-2b">Repeating</label>
 				    </fieldset>
 
-	          <label for="datetime">Date and Time:</label>
+	          <label for="datetime">Date and Time (MM/DD/YEAR D:DD AM/PM):</label>
+            <!-- <input type="datetime-local" data-clear-btn="false" name="date_time" id="date_time" value=""> -->
 	          <input type="datetime-local" data-clear-btn="false" name="date_time" id="date_time" value="">
 
 	          <label for="recurrment">Recurring schedule:</label>
