this breaks everything.....

--- a/appPages/Scheduled.html
+++ b/appPages/Scheduled.html
@@ -72,7 +72,7 @@
 	      		<input type="text" name="recurrment" id="recurrment" value="" placeholder="CRONTAB Format" />
 
 	          <label for="event_attributes">Event Attributes:</label>
-	      		<input type="text" name="event_attributes" id="event_attributes" value="" placeholder="{'nano': rocks, ...}" />
+	      		<input type="text" name="event_attributes" id="event_attributes" value="" placeholder="{'wrangler': rocks, ...}" />
 					</div>
 	      </form>
 	      <div>
