--- a/appPages/spime.html
+++ b/appPages/spime.html
@@ -1,4 +1,4 @@
-<div data-role="page" id="about">
+<div data-role="page" id="spime-management">
 	
 	{% include header.html title="spime management " %}
 
