--- a/appPages/spime.html
+++ b/appPages/spime.html
@@ -44,11 +44,11 @@
 		<ul data-role="listview" data-inset="true">
 			<li data-role="list-divider">Children</li>
 	        <li>
-	          <a id="Create-pico-button" href="#pico-creation" class="ui-btn ui-icon-edit ui-btn-icon-right">New Child Pico</a>
+	          <a id="Create-spime-button" href="#spime-creation" class="ui-btn ui-icon-edit ui-btn-icon-right">New Child Pico</a>
 	        </li>
 		</ul>
 		
-		<div data-role="collapsible-set" data-content-theme="a" data-filter="true" data-iconpos="right" id="child-picos">
+		<div data-role="collapsible-set" data-content-theme="a" data-filter="true" data-iconpos="right" id="child-spime">
 		</div>
 
 
@@ -60,14 +60,14 @@
 
 
 
-<div data-role="page" id="pico-creation" data-title="Create Child Pico">
+<div data-role="page" id="spime-creation" data-title="Create spime Pico">
   {% include header.html title="Create a Pico" %}
 
   <div data-role="main" class="ui-content">
    <ul id="pico-information" data-role="listview" data-inset="true"> 
     <li data-role="list-divider" >Create Pico</li>
     <li>
-     <form id="form-new-pico">
+     <form id="form-new-spime">
        <div data-role="fieldcontain">
         <label for="Subscription_name">Name:</label>
         <input type="text" name="Pico_name" id="Pico_name" value="" placeholder="" />
@@ -76,7 +76,7 @@
       </div>
     </form>
     <div>
-    <a id="Create-pico-confirm-button" class="ui-btn ui-btn-b ui-btn-inline">Create</a>
+    <a id="Create-spime-confirm-button" class="ui-btn ui-btn-b ui-btn-inline">Create</a>
       <a href="#about" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
     </div>
   </li>
