Adding Pico Name Header
Updates the pico name in the banner when navigating picos.

--- a/appPages/Scheduled.html
+++ b/appPages/Scheduled.html
@@ -1,5 +1,6 @@
 <div data-role="page" id="page-schedules" data-title="Scheduled Events">
   {% include header.html title="Scheduled Events" %}
+  {% include pico-name-header.html %}
 
    	<div data-role="content">
      	<ul id="scheduled-events-control" data-role="listview" data-inset="true"> 
@@ -40,6 +41,7 @@
 
 <div data-role="page" id="schedule-event" data-title="Schedule Event">
   {% include header.html title="Schedule an Event" %}
+  {% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="schedule-events" data-role="listview" data-inset="true"> 
@@ -88,6 +90,7 @@
 
 <div data-role="page" id="confirm-event-cancel" data-title="Cancel Scheduled Event">
   {% include header.html title="Cancel Scheduled Event" %}
+  {% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="remove-scheduled-event" data-role="listview" data-inset="true"> 
