--- a/appPages/about.html
+++ b/appPages/about.html
@@ -1,6 +1,7 @@
 <div data-role="page" id="about">
 	
 	{% include header.html title="About This Pico" %}
+	{% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 
@@ -62,6 +63,7 @@
 
 <div data-role="page" id="pico-creation" data-title="Create Child Pico">
   {% include header.html title="Create a Pico" %}
+  {% include pico-name-header.html %}
 
   <div data-role="main" class="ui-content">
    <ul id="pico-information" data-role="listview" data-inset="true"> 
