--- a/appPages/channel-management.html
+++ b/appPages/channel-management.html
@@ -1,5 +1,6 @@
 <div data-role="page" id="page-channel-management" data-title="ECI Management" >
   {% include header.html title="Channel Management" %}
+  {% include pico-name-header.html %}
 
    <div data-role="content">
        <p>
@@ -22,6 +23,7 @@
 
 <div data-role="page" id="install-channel" data-title="Install channel">
   {% include header.html title="Create a Channel" %}
+  {% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="install-channel" data-role="listview" data-inset="true"> 
@@ -53,6 +55,7 @@
 
 <div data-role="page" id="confirm-uninstall-channel" data-title="Uninstall Channel">
   {% include header.html title="Delete a Channel" %}
+  {% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="remove-channel" data-role="listview" data-inset="true"> 
