--- a/appPages/home.html
+++ b/appPages/home.html
@@ -5,6 +5,8 @@
      <a href="#" data-transition="slide" class="logout ui-link ui-btn-right ui-btn ui-btn-b ui-icon-power ui-btn-icon-left ui-shadow ui-corner-all">Account</a>
    </div>
 
+   {% include pico-name-header.html %}
+
 	<div data-role="main" class="ui-content">
 		<ul data-role="listview" data-inset="true"> 
 			<li data-role="list-divider" >KRL Developer Tools</li>
