--- a/appPages/install-rulesets.html
+++ b/appPages/install-rulesets.html
@@ -1,5 +1,6 @@
 <div data-role="page" id="page-installed-rulesets" data-title="Installed Rulesets">
   {% include header.html title="Installed Rulesets" %}
+  {% include pico-name-header.html %}
 
    <div data-role="content">
      <ul id="installed-rulesets-control" data-role="listview" data-inset="true"> 
@@ -19,6 +20,7 @@
 
 <div data-role="page" id="install-ruleset" data-title="Install Ruleset">
   {% include header.html title="Install a Ruleset" %}
+  {% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="install-ruleset" data-role="listview" data-inset="true"> 
@@ -44,6 +46,7 @@
 
 <div data-role="page" id="confirm-uninstall-ruleset" data-title="Uninstall Ruleset">
   {% include header.html title="Uninstall a Ruleset" %}
+  {% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="remove-ruleset" data-role="listview" data-inset="true"> 
