--- a/appPages/oAuth-client-registration.html
+++ b/appPages/oAuth-client-registration.html
@@ -1,5 +1,6 @@
 <div data-role="page" id="page-client-authorize" data-title="App Management" >
   {% include header.html title="Client Registration" %}
+  {% include pico-name-header.html %}
 
    <div data-role="content">
        <p>
@@ -22,6 +23,7 @@
 
 <div data-role="page" id="authorize-client" data-title="Authorize channel">
   {% include header.html title="Authorize a Client" %}
+  {% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="authorize-client" data-role="listview" data-inset="true"> 
@@ -59,6 +61,7 @@
 
 <div data-role="page" id="confirm-client-remove" data-title="DeAuthorize Client">
   {% include header.html title="DeAuthorize Client" %}
+  {% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="remove-client" data-role="listview" data-inset="true"> 
@@ -71,6 +74,7 @@
 </div>
 <div data-role="page" id="update-client" data-title="Update Client">
   {% include header.html title="Update Client" %}
+  {% include pico-name-header.html %}
 
   <div data-role="main" class="ui-content">
     <ul id="update-client" data-role="listview" data-inset="true"> 
