--- a/appPages/picologging.html
+++ b/appPages/picologging.html
@@ -1,6 +1,7 @@
 <div data-role="page" id="page-picologging" data-title="Pico Logs">
 
   {% include header.html title="Pico Logging" %}
+  {% include pico-name-header.html %}
 
    <div data-role="content">
      <ul data-role="listview" data-inset="true"> 
