--- a/appPages/registering-ruleset.html
+++ b/appPages/registering-ruleset.html
@@ -1,5 +1,6 @@
 <div data-role="page" id="registering-ruleset">
   {% include header.html title="Register Rulesets" %}
+  {% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 	<div id="registering-ruleset-dev">
@@ -32,6 +33,7 @@
 <div data-role="page" id="listing">
 	
     {% include header.html title="Registered Rulesets" %}
+    {% include pico-name-header.html %}
 
   	<div data-role="main" class="ui-content">
     
@@ -56,6 +58,7 @@
 <div data-role="page" id="updating-url">
 	
 	{% include header.html title="Manage Registered Ruleset" %}
+  {% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 		
