--- a/appPages/subscription.html
+++ b/appPages/subscription.html
@@ -2,6 +2,7 @@
 
 <div data-role="page" id="page-subscription-management" data-title="Subscription Management" >
   {% include header.html title="Subscription Management" %}
+  {% include pico-name-header.html %}
 
    <div data-role="content">
        <p>
@@ -24,6 +25,7 @@
 
 <div data-role="page" id="Subscribe" data-title="Subscribe">
   {% include header.html title="Create a Subscription" %}
+  {% include pico-name-header.html %}
 
   <div data-role="main" class="ui-content">
    <ul id="install-Subscription" data-role="listview" data-inset="true"> 
@@ -61,6 +63,7 @@
 
 <div data-role="page" id="confirm-uninstall-Subscription" data-title="Uninstall Subscription">
   {% include header.html title="Delete a Subscription" %}
+  {% include pico-name-header.html %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="remove-Subscription" data-role="listview" data-inset="true"> 
