Add placeholders to forms
Left a few blank we’ll need to discuss

--- a/appPages/channel-management.html
+++ b/appPages/channel-management.html
@@ -32,9 +32,9 @@
 	      <form id="form-install-channel">
 	        <div data-role="fieldcontain">
    	          <label for="channel_name">Channel Name:</label>
-		  <input type="text" name="channel_name" id="channel_name" value="" placeholder="" />
+		  <input type="text" name="channel_name" id="channel_name" value="" placeholder="Name" />
                     <label for="channel_type">Channel Type:</label>
-      <input type="text" name="channel_type" id="channel_type" value="" placeholder="" />
+      <input type="text" name="channel_type" id="channel_type" value="" placeholder="Type" />
                     <label for="channel_policy">Channel Policy:</label>
       <input type="text" name="channel_policy" id="channel_policy" value="" placeholder="" />
                     <label for="channel_attributes">Channel Attributes:</label>
