--- a/appPages/oAuth-client-registration.html
+++ b/appPages/oAuth-client-registration.html
@@ -32,19 +32,19 @@
 	      <form id="form-authorize-client">
 	        <div data-role="fieldcontain">
    	          <label for="client_name">Name:</label>
-      <input type="text" name="client_name" id="client_name" value="" placeholder="" />
+      <input type="text" name="client_name" id="client_name" value="" placeholder="Name" />
               <label for="client_Description">Description:</label>
-      <input type="text" name="client_Description" id="client_Description" value="" placeholder="" />
+      <input type="text" name="client_Description" id="client_Description" value="" placeholder="Description" />
               <label for="client_image_url">Image url:</label>
-      <input type="text" name="client_image_url" id="client_image_url" value="" placeholder="" />
+      <input type="text" name="client_image_url" id="client_image_url" value="" placeholder="http://www.example.com/images/logo.png" />
               <label for="client_callback_url">Callback url:</label>
-		  <input type="text" name="client_callback_url" id="client_callback_url" value="" placeholder="" />
+		  <input type="text" name="client_callback_url" id="client_callback_url" value="" placeholder="http://www.example.com/" />
               <label for="client_declined_url">Declined url:</label>
-      <input type="text" name="client_declined_url" id="client_declined_url" value="" placeholder="" />             
+      <input type="text" name="client_declined_url" id="client_declined_url" value="" placeholder="http://www.example.com/declined" />             
               <label for="client_info_page_url">info page url:</label>
-      <input type="text" name="client_info_page_url" id="client_info_page_url" value="" placeholder="" />
+      <input type="text" name="client_info_page_url" id="client_info_page_url" value="" placeholder="http://www.example.com/info" />
               <label for="client_bootstrapRids">bootstrap Rids:</label>
-      <input type="text" name="client_bootstrapRids" id="client_bootstrapRids" value="" placeholder="" />
+      <input type="text" name="client_bootstrapRids" id="client_bootstrapRids" value="" placeholder="ex: b507199x5.prod, b507199x1.prod" />
 		</div>
 	      </form>
 	      <div>
