--- a/appPages/subscription.html
+++ b/appPages/subscription.html
@@ -34,17 +34,17 @@
      <form id="form-subscribe">
        <div data-role="fieldcontain">
         <label for="Subscription_name">Name:</label>
-        <input type="text" name="Subscription_name" id="Subscription_name" value="" placeholder="" />
+        <input type="text" name="Subscription_name" id="Subscription_name" value="" placeholder="Name" />
         <label for="Subscription_name_space">Name Space:</label>
-        <input type="text" name="Subscription_name_space" id="Subscription_name_space" value="" placeholder="" />
+        <input type="text" name="Subscription_name_space" id="Subscription_name_space" value="" placeholder="ex: school_picos" />
         <label for="Subscription_type">Channel Type:</label>
         <input type="text" name="Subscription_type" id="Subscription_type" value="" placeholder="Type" />
         <label for="Subscription_my_role">My_role:</label>
-        <input type="text" name="Subscription_my_role" id="Subscription_my_role" value="" placeholder="" />
+        <input type="text" name="Subscription_my_role" id="Subscription_my_role" value="" placeholder="ex: Teacher" />
         <label for="Subscription_your_role">Your_role:</label>
-        <input type="text" name="Subscription_your_role" id="Subscription_your_role" value="" placeholder="" />
+        <input type="text" name="Subscription_your_role" id="Subscription_your_role" value="" placeholder="ex: Student" />
         <label for="Subscription_target">Target:</label>
-        <input type="text" name="Subscription_target" id="Subscription_target" value="" placeholder="" />
+        <input type="text" name="Subscription_target" id="Subscription_target" value="" placeholder="Target Pico ECI (ex: 01234567-89AB-CDEF-0123-456789ABCDEF)" />
         <label for="Subscription_attrs">Attrs:</label>
         <input type="text" name="Subscription_attrs" id="Subscription_attrs" value="" placeholder="" />
       </div>
