--- a/appPages/channel-management.html
+++ b/appPages/channel-management.html
@@ -35,9 +35,9 @@
 		  <input type="text" name="channel_name" id="channel_name" value="" placeholder="Name" />
                     <label for="channel_type">Channel Type:</label>
       <input type="text" name="channel_type" id="channel_type" value="" placeholder="Type" />
-                    <label for="channel_policy">Channel Policy:</label>
-<!--      <input type="text" name="channel_policy" id="channel_policy" value="" placeholder="" />
-                    <label for="channel_attributes">Channel Attributes:</label> <!-- not yet implemented -->
+<!--                    <label for="channel_policy">Channel Policy:</label>
+      <input type="text" name="channel_policy" id="channel_policy" value="" placeholder="" /> <!-- not yet implemented -->
+                    <label for="channel_attributes">Channel Attributes:</label>
       <input type="text" name="channel_attributes" id="channel_attributes" value="" placeholder="" />
 		</div>
 	      </form>
