Functionality for Event History List
Event History now shows up on the Scheduled Events page. Currently
lacks functionality for filtering items in the collapsible sets.

--- a/appPages/Scheduled.html
+++ b/appPages/Scheduled.html
@@ -12,21 +12,14 @@
       <div data-role="tabs" id="tabs">
         <div data-role="navbar">
           <ul>
-            <li><a href="#one" data-ajax="false">Scheduled Events</a></li>
-            <li><a href="#two" data-ajax="false">History</a></li>
+            <li><a href="#scheduled-events-list" data-ajax="false">Scheduled Events</a></li>
+            <li><a href="#schedule-history-list" data-ajax="false">History</a></li>
           </ul>
         </div>
-        <div data-role="collapsible-set" data-filter="true" data-content-theme="a" data-iconpos="right" id="scheduled-events">
-        <div id="two">
-          <ul data-role="listview" data-inset="true">
-              <li><a href="#">Acura</a></li>
-              <li><a href="#">Audi</a></li>
-              <li><a href="#">BMW</a></li>
-              <li><a href="#">Cadillac</a></li>
-              <li><a href="#">Ferrari</a></li>
-          </ul>
+        <div id="scheduled-events-list" data-role="collapsible-set" data-filter="false" data-content-theme="a" data-iconpos="right">
         </div>
-      </div>
+        <div id="schedule-history-list" data-role="collapsible-set" data-filter="false" data-content-theme="a" data-iconpos="right">         
+        </div>
      
      </div>
 
