Prototype Management in Devtools
Adding prototype manager page to Devtools site. Provides a listing of
all prototypes and the ability to edit and delete them. The page will
also allow adding new prototypes.

This commit also adds the selection of a prototype when creating a
child pico in the #about page.

Adding, editing, and deleting prototypes are currently non-functional.

--- a/appPages/about.html
+++ b/appPages/about.html
@@ -78,7 +78,13 @@
       </div>
     </form>
     <div>
-    <a id="Create-pico-confirm-button" class="ui-btn ui-btn-b ui-btn-inline">Create</a>
+      <p>Select a Pico Prototype:</p>
+      <select name="prototypeMenu" id="prototypeMenu">
+      	<option selected="selected">None</option>
+      </select>
+    </div>
+      <div>
+      <a id="Create-pico-confirm-button" class="ui-btn ui-btn-b ui-btn-inline">Create</a>
       <a href="#about" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
     </div>
   </li>
