--- a/appPages/registering-ruleset.html
+++ b/appPages/registering-ruleset.html
@@ -18,7 +18,8 @@
               </div>
             </div>
             <div class="form-actions">
-            	<a id= "regester-ruleset-confirm-button" class="save" href="#" data-icon="check" data-role="button" data-inline="true" data-theme="b">Register Ruleset</a>
+            	<a id= "register-ruleset-confirm-button" class="save" href="#" data-icon="check" data-role="button" data-inline="true" data-theme="b">Register Ruleset</a>
+              <a href="#listing" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
               <!--<button type="submit" class="btn btn-primary">Register Ruleset</button>-->
             </div>
           </fieldset>
