--- a/appPages/home.html
+++ b/appPages/home.html
@@ -20,6 +20,9 @@
 				<a href="#page-installed-rulesets" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Installed Rulesets</a>
 			</li>
 			<li>
+				<a href="#page-prototypes" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Prototype Manager</a>
+			</li>
+			<li>
 				<a href="#page-channel-management" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Channel Manager</a>
 			</li> 
 			<li>
